[gd_scene load_steps=25 format=2]

[ext_resource path="res://script/FlappyBird.gd" type="Script" id=1]
[ext_resource path="res://asset/bg.jpg" type="Texture" id=2]
[ext_resource path="res://script/pipe.gd" type="Script" id=3]
[ext_resource path="res://asset/topPipe.png" type="Texture" id=4]
[ext_resource path="res://asset/bottomPipe.png" type="Texture" id=5]
[ext_resource path="res://script/bird.gd" type="Script" id=6]
[ext_resource path="res://asset/player/player1.png" type="Texture" id=7]
[ext_resource path="res://asset/player/player2.png" type="Texture" id=8]
[ext_resource path="res://asset/player/player3.png" type="Texture" id=9]
[ext_resource path="res://asset/player/player4.png" type="Texture" id=10]
[ext_resource path="res://script/floor.gd" type="Script" id=11]
[ext_resource path="res://asset/floor.png" type="Texture" id=12]
[ext_resource path="res://script/floors.gd" type="Script" id=13]
[ext_resource path="res://asset/font/RedRose-Bold.tres" type="DynamicFont" id=14]
[ext_resource path="res://asset/puruz.png" type="Texture" id=15]
[ext_resource path="res://asset/font/RedRose-Bold-3.tres" type="DynamicFont" id=16]
[ext_resource path="res://asset/restart.png" type="Texture" id=17]
[ext_resource path="res://script/restartbutton.gd" type="Script" id=18]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]

[node name="FlappyBird" type="Node2D"]
script = ExtResource( 1 )

[node name="speedTimer" type="Timer" parent="."]
wait_time = 40.0
autostart = true

[node name="bg" type="Sprite" parent="."]
position = Vector2( 500, 300 )
texture = ExtResource( 2 )

[node name="pipe" type="Node2D" parent="."]
editor/display_folded = true

[node name="pipe1" type="StaticBody2D" parent="pipe"]
editor/display_folded = true
position = Vector2( 1000, -300 )
script = ExtResource( 3 )

[node name="topPipe" type="Sprite" parent="pipe/pipe1"]
texture = ExtResource( 4 )

[node name="bottomPipe" type="Sprite" parent="pipe/pipe1"]
position = Vector2( 0, 700 )
texture = ExtResource( 5 )

[node name="topPipeCollision" type="CollisionShape2D" parent="pipe/pipe1"]
scale = Vector2( 2.7, 32.3 )
shape = SubResource( 1 )

[node name="bottomPipeCollision" type="CollisionShape2D" parent="pipe/pipe1"]
position = Vector2( 0, 700 )
scale = Vector2( 2.7, 19.1 )
shape = SubResource( 2 )

[node name="pipe2" type="StaticBody2D" parent="pipe"]
editor/display_folded = true
position = Vector2( 1250, -300 )
script = ExtResource( 3 )

[node name="topPipe" type="Sprite" parent="pipe/pipe2"]
texture = ExtResource( 4 )

[node name="bottomPipe" type="Sprite" parent="pipe/pipe2"]
position = Vector2( 0, 700 )
texture = ExtResource( 5 )

[node name="topPipeCollision2" type="CollisionShape2D" parent="pipe/pipe2"]
scale = Vector2( 2.7, 32.3 )
shape = SubResource( 1 )

[node name="bottomPipeCollision2" type="CollisionShape2D" parent="pipe/pipe2"]
position = Vector2( 0, 700 )
scale = Vector2( 2.7, 19.1 )
shape = SubResource( 2 )

[node name="pipe3" type="StaticBody2D" parent="pipe"]
editor/display_folded = true
position = Vector2( 1500, -300 )
script = ExtResource( 3 )

[node name="topPipe" type="Sprite" parent="pipe/pipe3"]
texture = ExtResource( 4 )

[node name="bottomPipe" type="Sprite" parent="pipe/pipe3"]
position = Vector2( 0, 700 )
texture = ExtResource( 5 )

[node name="topPipeCollision3" type="CollisionShape2D" parent="pipe/pipe3"]
scale = Vector2( 2.7, 32.3 )
shape = SubResource( 1 )

[node name="bottomPipeCollision3" type="CollisionShape2D" parent="pipe/pipe3"]
position = Vector2( 0, 700 )
scale = Vector2( 2.7, 19.1 )
shape = SubResource( 2 )

[node name="pipe4" type="StaticBody2D" parent="pipe"]
editor/display_folded = true
position = Vector2( 1750, -300 )
script = ExtResource( 3 )

[node name="topPipe" type="Sprite" parent="pipe/pipe4"]
texture = ExtResource( 4 )

[node name="bottomPipe" type="Sprite" parent="pipe/pipe4"]
position = Vector2( 0, 700 )
texture = ExtResource( 5 )

[node name="topPipeCollision4" type="CollisionShape2D" parent="pipe/pipe4"]
scale = Vector2( 2.7, 32.3 )
shape = SubResource( 1 )

[node name="bottomPipeCollision4" type="CollisionShape2D" parent="pipe/pipe4"]
position = Vector2( 0, 700 )
scale = Vector2( 2.7, 19.1 )
shape = SubResource( 2 )

[node name="pipe5" type="StaticBody2D" parent="pipe"]
editor/display_folded = true
position = Vector2( 2000, -300 )
script = ExtResource( 3 )

[node name="topPipe" type="Sprite" parent="pipe/pipe5"]
texture = ExtResource( 4 )

[node name="bottomPipe" type="Sprite" parent="pipe/pipe5"]
position = Vector2( 0, 700 )
texture = ExtResource( 5 )

[node name="topPipeCollision5" type="CollisionShape2D" parent="pipe/pipe5"]
scale = Vector2( 2.7, 32.3 )
shape = SubResource( 1 )

[node name="bottomPipeCollision5" type="CollisionShape2D" parent="pipe/pipe5"]
position = Vector2( 0, 700 )
scale = Vector2( 2.7, 19.1 )
shape = SubResource( 2 )

[node name="pipe6" type="StaticBody2D" parent="pipe"]
editor/display_folded = true
position = Vector2( 2250, -300 )
script = ExtResource( 3 )

[node name="topPipe" type="Sprite" parent="pipe/pipe6"]
texture = ExtResource( 4 )

[node name="bottomPipe" type="Sprite" parent="pipe/pipe6"]
position = Vector2( 0, 700 )
texture = ExtResource( 5 )

[node name="topPipeCollision6" type="CollisionShape2D" parent="pipe/pipe6"]
scale = Vector2( 2.7, 32.3 )
shape = SubResource( 1 )

[node name="bottomPipeCollision6" type="CollisionShape2D" parent="pipe/pipe6"]
position = Vector2( 0, 700 )
scale = Vector2( 2.7, 19.1 )
shape = SubResource( 2 )

[node name="bird" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 150, 200 )
script = ExtResource( 6 )

[node name="birdSprite" type="AnimatedSprite" parent="bird"]
frames = SubResource( 3 )
speed_scale = 2.5

[node name="birdCollision" type="CollisionShape2D" parent="bird"]
position = Vector2( 5, 0 )
rotation = 1.5708
scale = Vector2( 2, 1.4 )
shape = SubResource( 4 )

[node name="floor" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 250, 539 )
script = ExtResource( 11 )

[node name="floor1" type="Sprite" parent="floor"]
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="floor2" type="Sprite" parent="floor"]
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="floor3" type="Sprite" parent="floor"]
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
scale = Vector2( 25, 6 )
shape = SubResource( 5 )

[node name="ceiling" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 150, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ceiling"]
scale = Vector2( 15, 1 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="score" type="RichTextLabel" parent="."]
margin_left = 850.0
margin_top = 6.0
margin_right = 997.0
margin_bottom = 34.0
custom_fonts/normal_font = ExtResource( 14 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
tab_size = 1
text = "Score: 0"

[node name="puruzSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.545098, 0.509804, 0.509804, 0.607843 )
position = Vector2( 500, 300 )
texture = ExtResource( 15 )

[node name="resultvbox" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
margin_right = 1000.0
margin_bottom = 600.0

[node name="resultscore" type="Label" parent="resultvbox"]
margin_left = 372.0
margin_top = 35.0
margin_right = 627.0
margin_bottom = 113.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.929412, 0.243137, 0.101961, 1 )
text = "Score: 0"

[node name="restartbutton" type="Button" parent="resultvbox"]
margin_left = 366.0
margin_top = 153.0
margin_right = 634.0
margin_bottom = 600.0
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
enabled_focus_mode = 0
icon = ExtResource( 17 )
flat = true
script = ExtResource( 18 )
[connection signal="timeout" from="speedTimer" to="." method="_on_speedTimer_timeout"]
[connection signal="timeout" from="Timer" to="pipe/pipe4" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="pipe/pipe2" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="pipe/pipe1" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="pipe/pipe3" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="pipe/pipe5" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="pipe/pipe6" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="floor/floor1" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="floor/floor2" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="floor/floor3" method="_on_Timer_timeout"]
[connection signal="pressed" from="resultvbox/restartbutton" to="resultvbox/restartbutton" method="_on_restartbutton_pressed"]
